I removed the .tex files form the tracking and then added them back after some considerations :P

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 ## Other files
 .project
 
+## R workspace
+\*R\*
+.Rhistory
+
+## image directory
+img/
+
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
@@ -9,6 +16,7 @@
 *.fls
 *.out
 *.toc
+*.pdf
 
 ## Intermediate documents:
 *.dvi
